--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ version = "0.0.0"
 description = ""
 authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "refx" }, { include = "nnx" }]
+packages = [{ include = "refx" }]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-simple-pytree = { path = "../simple-pytree", develop = true }
+# simple-pytree = { path = "../simple-pytree", develop = true }
+simple-pytree = ">=0.1.6"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,10 +21,6 @@ ipykernel = "^6.21.3"
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 
-
-[tool.poetry.group.examples.dependencies]
-matplotlib = "^3.7.1"
-ciclo = { path = "../ciclo", develop = true }
 
 [build-system]
 requires = ["poetry-core"]
