--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,10 @@ version = "0.0.0"
 description = ""
 authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "refx" }]
+# packages = [{ include = "refx" }]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-# simple-pytree = { path = "../simple-pytree", develop = true }
-simple-pytree = ">=0.1.6"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,6 +18,8 @@ ipykernel = "^6.21.3"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
+# simple-pytree = { path = "../simple-pytree", develop = true }
+simple-pytree = ">=0.1.6"
 
 
 [build-system]
