--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
+jax = ">=0.4.6"
 
 
 [tool.poetry.group.dev.dependencies]
